--- a/timeseries/timeseries.ipynb
+++ b/timeseries/timeseries.ipynb
@@ -371,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.8 (default, Aug 13 2020, 07:46:32) \n[GCC 4.8.5 20150623 (Red Hat 4.8.5-39)]"
   },
   "vscode": {
    "interpreter": {
