New work with rs: gradients and lidar included

--- a/height_time_diagrams/calc_htd_rs.ipynb
+++ b/height_time_diagrams/calc_htd_rs.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
     "loadpath = '/users/tlezuo/icon-vis/height_time_diagrams/data/'\n",
     "loc=lf.kols\n",
     "minlen_modlev = 73\n",
-    "htd_data_model = np.load(loadpath+'htd_ICON_'+loc.name+'.npy',allow_pickle='TRUE').item()\n",
+    "htd_data_model = np.load(loadpath+'htd_ICON_'+loc.short+'.npy',allow_pickle='TRUE').item()\n",
     "lev_model = htd_data_model['HFL_loc']\n",
     "lev_model_cut = np.array(lev_model[0:minlen_modlev])\n",
     "\n",
@@ -90,11 +90,11 @@
     "for pvar in pvars_list:\n",
     "    lidar_data_rs[pvar.name] = np.zeros((len(rstime_list),minlen)) \n",
     "    lidar_data_rs_interp[pvar.name] = np.zeros((len(rstime_list),minlen_modlev)) \n",
-    "    lidar_data_rs_interp[pvar.name+'_diff'] = np.zeros((len(rstime_list),minlen_modlev))\n",
+    "    # lidar_data_rs_interp[pvar.name+'_diff'] = np.zeros((len(rstime_list),minlen_modlev))\n",
     "for cvar in cvars_list:\n",
     "    lidar_data_rs[cvar.name] =  np.zeros((len(rstime_list),minlen)) \n",
     "    lidar_data_rs_interp[cvar.name] = np.zeros((len(rstime_list),minlen_modlev)) \n",
-    "    lidar_data_rs_interp[cvar.name+'_diff'] = np.zeros((len(rstime_list),minlen_modlev))\n",
+    "    # lidar_data_rs_interp[cvar.name+'_diff'] = np.zeros((len(rstime_list),minlen_modlev))\n",
     "\n",
     "\n",
     "# loop over sounding txt files\n",
@@ -133,23 +133,23 @@
     "lidar_data_rs_interp['DIR'] = calc.wind_direction(lidar_data_rs_interp['U']* units('m/s'),lidar_data_rs_interp['V']* units('m/s'), convention='from')\n",
     "\n",
     "## ADD DIFF VARIABLES ## \n",
-    "# (only for vertically interpolated data as they have same levels = length)\n",
-    "for now in range(1,len(plotdates)):\n",
-    "    # dates\n",
-    "    pdate_now = plotdates[now]\n",
-    "    pdate_before = plotdates[now-1]\n",
-    "    delt=pdate_now-pdate_before\n",
+    "# # (only for vertically interpolated data as they have same levels = length)\n",
+    "# for now in range(1,len(plotdates)):\n",
+    "#     # dates\n",
+    "#     pdate_now = plotdates[now]\n",
+    "#     pdate_before = plotdates[now-1]\n",
+    "#     delt=pdate_now-pdate_before\n",
     "    \n",
-    "    # compute difference for each variable\n",
-    "    for pvar in pvars_list:\n",
-    "        lidar_data_rs_interp[pvar.name+'_diff'][now]  = np.array(lidar_data_rs_interp[pvar.name][now,:]) - np.array(lidar_data_rs_interp[pvar.name][now-1,:])\n",
+    "#     # compute difference for each variable\n",
+    "#     for pvar in pvars_list:\n",
+    "#         lidar_data_rs_interp[pvar.name+'_diff'][now]  = np.array(lidar_data_rs_interp[pvar.name][now,:]) - np.array(lidar_data_rs_interp[pvar.name][now-1,:])/(delt.seconds/3600)\n",
     "\n",
-    "    for cvar in cvars_list:\n",
-    "        lidar_data_rs_interp[cvar.name+'_diff'][now]  = np.array(lidar_data_rs_interp[cvar.name][now,:]) - np.array(lidar_data_rs_interp[cvar.name][now-1,:])\n",
+    "#     for cvar in cvars_list:\n",
+    "#         lidar_data_rs_interp[cvar.name+'_diff'][now]  = np.array(lidar_data_rs_interp[cvar.name][now,:]) - np.array(lidar_data_rs_interp[cvar.name][now-1,:])/(delt.seconds/3600)\n",
     "\n",
     "## SAVE LIDAR DATA ##\n",
     "np.save(savepath+'htd_rs_Kolsass.npy', lidar_data_rs) \n",
-    "np.save(savepath+'htd_rs_interp_Kolsass.npy', lidar_data_rs_interp) \n"
+    "np.save(savepath+'htd_rs_interp_Kolsass.npy', lidar_data_rs_interp) "
    ]
   },
   {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
     "loadpath = '/users/tlezuo/icon-vis/height_time_diagrams/data/'\n",
     "minlen_modlev = 73 # model level where to cut them\n",
     "loc=lf.murs\n",
-    "htd_data_model = np.load(loadpath+'htd_ICON_'+loc.name+'.npy',allow_pickle='TRUE').item()\n",
+    "htd_data_model = np.load(loadpath+'htd_ICON_'+loc.short+'.npy',allow_pickle='TRUE').item()\n",
     "lev_model = htd_data_model['HFL_loc']\n",
     "lev_model_cut = np.array(lev_model[0:minlen_modlev])\n",
     "\n",
@@ -421,12 +421,9 @@
     "for pvar in pvars_list:\n",
     "    lidar_data_rs[pvar.name] = np.zeros((len(rstime_list),minlen)) \n",
     "    lidar_data_rs_interp[pvar.name] = np.zeros((len(rstime_list),minlen_modlev)) \n",
-    "    lidar_data_rs_interp[pvar.name+'_diff'] = np.zeros((len(rstime_list),minlen_modlev))\n",
     "for cvar in cvars_list:\n",
     "    lidar_data_rs[cvar.name] =  np.zeros((len(rstime_list),minlen)) \n",
     "    lidar_data_rs_interp[cvar.name] = np.zeros((len(rstime_list),minlen_modlev)) \n",
-    "    lidar_data_rs_interp[cvar.name+'_diff'] = np.zeros((len(rstime_list),minlen_modlev))\n",
-    "\n",
     "\n",
     "# loop over sounding txt files\n",
     "for counter,rstime in enumerate(rstime_list):\n",
@@ -462,21 +459,6 @@
     "            lidar_data_rs_interp[cvar.name][counter]  = interp1d(sounding_rs, lev_rs, np.transpose(lev_model_cut))\n",
     "# recalculate wind direction as it might be wrongly interp (360vs0-problem)\n",
     "lidar_data_rs_interp['DIR'] = calc.wind_direction(lidar_data_rs_interp['U']* units('m/s'),lidar_data_rs_interp['V']* units('m/s'), convention='from')\n",
-    "\n",
-    "## ADD DIFF VARIABLES ## \n",
-    "# (only for vertically interpolated data as they have same levels = length)\n",
-    "for now in range(1,len(plotdates)):\n",
-    "    # dates\n",
-    "    pdate_now = plotdates[now]\n",
-    "    pdate_before = plotdates[now-1]\n",
-    "    delt=pdate_now-pdate_before\n",
-    "    \n",
-    "    # compute difference for each variable\n",
-    "    for pvar in pvars_list:\n",
-    "        lidar_data_rs_interp[pvar.name+'_diff'][now]  = np.array(lidar_data_rs_interp[pvar.name][now,:]) - np.array(lidar_data_rs_interp[pvar.name][now-1,:])\n",
-    "\n",
-    "    for cvar in cvars_list:\n",
-    "        lidar_data_rs_interp[cvar.name+'_diff'][now]  = np.array(lidar_data_rs_interp[cvar.name][now,:]) - np.array(lidar_data_rs_interp[cvar.name][now-1,:])\n",
     "\n",
     "## SAVE HTD DATA ##\n",
     "np.save(savepath+'htd_rs_Munich.npy', lidar_data_rs) \n",
@@ -684,7 +666,7 @@
    "source": [
     "# Innsbruck test\n",
     "rs_path = '/users/tlezuo/data/2D/operational_rs/'\n",
-    "rsname = 'rs_inn_2019091302.csv'\n",
+    "rsname = 'rs_ifl_2019091302.csv'\n",
     "rs_df = pd.read_csv(rs_path+rsname,names=['i','t','ALT','P','T','TD','DIR','VEL'],index_col=False)\n",
     "rs_df"
    ]
@@ -696,21 +678,21 @@
    "outputs": [],
    "source": [
     "############################################################################################\n",
-    "## INN SOUNDINGS ## \n",
+    "## INNSBRUCK SOUNDINGS ## \n",
     "# from where to load\n",
     "rs_path = '/users/tlezuo/data/2D/operational_rs/'\n",
     "minlen = 96 # minimal lenght of obs soundings\n",
     "\n",
     "# decide which variables to calculate\n",
     "pvars_list= [vf.VEL, vf.DIR, vf.T, vf.P, vf.ALT, vf.TD,] \n",
-    "cvars_list = [vf.U, vf.V, vf.RH, vf.QV ]\n",
+    "cvars_list = [vf.U, vf.V, vf.RH, vf.QV,vf.TH]\n",
     "\n",
     "## LOAD DATA ##\n",
     "# get model stuff for interpolation\n",
     "loadpath = '/users/tlezuo/icon-vis/height_time_diagrams/data/'\n",
     "minlen_modlev = 73 # model level where to cut them\n",
     "loc=lf.ifl\n",
-    "htd_data_model = np.load(loadpath+'htd_ICON_'+loc.name+'.npy',allow_pickle='TRUE').item()\n",
+    "htd_data_model = np.load(loadpath+'htd_ICON_'+loc.short+'.npy',allow_pickle='TRUE').item()\n",
     "lev_model = htd_data_model['HFL_loc']\n",
     "lev_model_cut = np.array(lev_model[0:minlen_modlev])\n",
     "\n",
@@ -720,7 +702,7 @@
     "# time [dt]\n",
     "plotdates = [dt.datetime(2019,9,13,2,00),]\n",
     "# time [filename]\n",
-    "rsname_list = ['rs_inn_201909'+t+'.csv'for t in rstime_list]\n",
+    "rsname_list = ['rs_ifl_201909'+t+'.csv'for t in rstime_list]\n",
     "\n",
     "# initialize dict\n",
     "lidar_data_rs = {}\n",
@@ -782,6 +764,11 @@
     "np.save(savepath+'htd_rs_Innsbruck.npy', lidar_data_rs) \n",
     "np.save(savepath+'htd_rs_interp_Innsbruck.npy', lidar_data_rs_interp)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
