--- a/height_time_diagrams/calc_htd_icon.ipynb
+++ b/height_time_diagrams/calc_htd_icon.ipynb
@@ -694,7 +694,314 @@
       "     Weerberg\n",
       "     Terfens\n",
       "     Arbeser\n",
-      "     Radiosounding Munich\n"
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 07:30\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 08:00\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 08:30\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 09:00\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 09:30\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 10:00\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 10:30\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 11:00\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 11:30\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 12:00\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 12:30\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 13:00\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 13:30\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 14:00\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 14:30\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 15:00\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 15:30\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 16:00\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 16:30\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 17:00\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 17:30\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 18:00\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 18:30\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 19:00\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 19:30\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 20:00\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 20:30\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 21:00\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 21:30\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 22:00\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 22:30\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 23:00\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/13 at 23:30\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n",
+      "calculating htd and ts 2019/09/14 at 00:00\n",
+      "     Hochhaueser\n",
+      "     Kolsass\n",
+      "     Eggen\n",
+      "     Weerberg\n",
+      "     Terfens\n",
+      "     Arbeser\n",
+      "     Radiosounding Munich\n",
+      "     Station & Radiosounding Innsbruck Airport\n"
      ]
     }
    ],
@@ -733,18 +1040,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/scratch/tlezuo/miniconda3/envs/psyplot/lib/python3.9/site-packages/metpy/calc/thermo.py:1114: RuntimeWarning: invalid value encountered in log\n",
-      "  val = np.log(vapor_pressure / mpconsts.nounit.sat_pressure_0c)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## CALCULATE NEW VARS AND SAVE ##\n",
     "for loc in loc_list: # for each location\n",
@@ -773,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +1099,7 @@
        "        90.00243464,  77.99242429,  65.71835391,  50.16085887])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +1125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:20:46) \n[GCC 9.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
