--- a/height_time_diagrams/plot_htd_compare.ipynb
+++ b/height_time_diagrams/plot_htd_compare.ipynb
@@ -83,7 +83,20 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/users/tlezuo/icon-vis/height_time_diagrams/data/htd_ICON_Kolsass.npy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [3], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m loc\u001b[39m=\u001b[39mlf\u001b[39m.\u001b[39mkols\n\u001b[1;32m      3\u001b[0m \u001b[39m# ICON model\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m htd_data_model \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mload(loadpath\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m\u001b[39mhtd_ICON_\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mloc\u001b[39m.\u001b[39mname\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.npy\u001b[39m\u001b[39m'\u001b[39m,allow_pickle\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mTRUE\u001b[39m\u001b[39m'\u001b[39m)\u001b[39m.\u001b[39mitem()\n\u001b[1;32m      5\u001b[0m \u001b[39m# radiosoundings\u001b[39;00m\n\u001b[1;32m      6\u001b[0m htd_data_rs \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mload(loadpath\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m\u001b[39mhtd_rs_Kolsass.npy\u001b[39m\u001b[39m'\u001b[39m,allow_pickle\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mTRUE\u001b[39m\u001b[39m'\u001b[39m)\u001b[39m.\u001b[39mitem()\n",
+      "File \u001b[0;32m/scratch/tlezuo/miniconda3/envs/psyplot/lib/python3.9/site-packages/numpy/lib/npyio.py:390\u001b[0m, in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding)\u001b[0m\n\u001b[1;32m    388\u001b[0m     own_fid \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[1;32m    389\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 390\u001b[0m     fid \u001b[39m=\u001b[39m stack\u001b[39m.\u001b[39menter_context(\u001b[39mopen\u001b[39;49m(os_fspath(file), \u001b[39m\"\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m\"\u001b[39;49m))\n\u001b[1;32m    391\u001b[0m     own_fid \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m    393\u001b[0m \u001b[39m# Code to distinguish from NumPy binary files and pickles.\u001b[39;00m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/users/tlezuo/icon-vis/height_time_diagrams/data/htd_ICON_Kolsass.npy'"
+     ]
+    }
+   ],
    "source": [
     "## LOAD DATA ##\n",
     "loc=lf.kols\n",
@@ -103,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +964,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:20:46) \n[GCC 9.4.0]"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
