Mainly Timeseries of Rad, Tke, Normal AND post-processing of hf data

--- a/height_time_diagrams/plot_htd_stations.ipynb
+++ b/height_time_diagrams/plot_htd_stations.ipynb
@@ -337,7 +337,7 @@
     "zmax = zmin+1500\n",
     "altitudes = np.arange(zmin,zmax+1,500)\n",
     "\n",
-    "# time range\n",
+    "# time range and ticks\n",
     "startdate_plot = dt.datetime(2019,9,12,22,00)\n",
     "enddate_plot = dt.datetime(2019,9,14,2,00)\n",
     "plotfreq_plot = '2h0min'\n",
@@ -414,10 +414,10 @@
     "##################################################################################################\n",
     "## TIMESERIES ##\n",
     "# OBS\n",
-    "ax_ts.plot(ts_data_stat['dt'],np.transpose(ts_data_stat[spvar.name]),color='dodgerblue',alpha=0.6, label='observations')\n",
+    "ax_ts.plot(ts_data_stat['dt'],np.transpose(ts_data_stat[spvar.name]),color='m',alpha=0.6, label='observations')\n",
     "\n",
     "# ICON \n",
-    "ax_ts.plot(plotdates_model,ts_data_icon[spvar.name],color='m',label='ICON')\n",
+    "ax_ts.plot(plotdates_model,ts_data_icon[spvar.name],color='dodgerblue',label='ICON')\n",
     "\n",
     "# plotting options\n",
     "ax_ts.set_ylim(spvar.min,spvar.max)\n",
@@ -911,7 +911,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:20:46) \n[GCC 9.4.0]"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
