Julian vcs and much more

--- a/height_time_diagrams/plot_rs_compare_valley_plain.ipynb
+++ b/height_time_diagrams/plot_rs_compare_valley_plain.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:numexpr.utils:Note: NumExpr detected 36 cores but \"NUMEXPR_MAX_THREADS\" not set, so enforcing safe limit of 8.\n",
-      "INFO:numexpr.utils:NumExpr defaulting to 8 threads.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load modules\n",
     "import sys\n",
@@ -38,12 +29,33 @@
     "import datetime as dt\n",
     "\n",
     "from iconarray.plot import formatoptions # import plotting formatoptions (for use with psyplot)\n",
-    "import iconarray as iconvis # import self-written modules from iconarray"
+    "import iconarray as iconvis # import self-written modules from iconarray\n",
+    "\n",
+    "###############################################################################################\n",
+    "# define class of pc_dict\n",
+    "class Point_coordinates:\n",
+    "    def __init__(self, shortname, name, color, marker, lat, lon, altitude, iconID, iconHSURF, iconHHL, iconHFL, height_dict):\n",
+    "        self.short = shortname\n",
+    "        self.name = name\n",
+    "        self.color = color\n",
+    "        self.marker = marker\n",
+    "        self.lat = lat\n",
+    "        self.lon = lon\n",
+    "        self.alt = altitude\n",
+    "        self.iconID = iconID \n",
+    "        self.iconHSURF = iconHSURF\n",
+    "        self.iconHHL = iconHHL\n",
+    "        self.iconHFL = iconHFL\n",
+    "        self.hdict = height_dict \n",
+    "\n",
+    "\n",
+    "# load pc_dict and its lists\n",
+    "pc_dict = np.load('../utilities_tlezuo/pc_dict.npy',allow_pickle=True).item()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +73,7 @@
     "# decide which locations to calculate\n",
     "loc_list = []\n",
     "# loc_list.extend([])\n",
-    "loc_list=[lf.kols]\n",
+    "loc_list=[pc_dict['kols']]\n",
     "\n",
     "# decide which variables to calculate\n",
     "pvars_list = []\n",
@@ -87,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -226,11 +238,11 @@
     "## PLOT SINGLE PROFILE ##\n",
     "# general settings\n",
     "pvar = vf.VEL\n",
-    "loc= lf.kols\n",
+    "loc= pc_dict['kols']\n",
     "pdate = dt.datetime(2019,9,13,20,00) # only at rs times\n",
     "\n",
     "# plotsettings\n",
-    "# xmin=0\n",
+    "xmin=0\n",
     "xmax=25\n",
     "ymin=500\n",
     "ymax=4000\n",
@@ -257,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -389,11 +401,11 @@
     "# general settings\n",
     "pvar = vf.T\n",
     "pdate1 = dt.datetime(2019,9,13,13,00)\n",
-    "loc1= lf.kols\n",
+    "loc1= pc_dict['kols']\n",
     "pdate2 = dt.datetime(2019,9,13,15,00)\n",
-    "loc2= lf.kols\n",
+    "loc2= pc_dict['kols']\n",
     "pdate3 = dt.datetime(2019,9,13,17,00)\n",
-    "loc3= lf.kols\n",
+    "loc3= pc_dict['kols']\n",
     "\n",
     "# plotsettings\n",
     "xmin=270\n",
@@ -432,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -451,9 +463,9 @@
     "# general settings\n",
     "pvar = vf.T\n",
     "pdate1 = dt.datetime(2019,9,13,11,00)\n",
-    "loc1= lf.kols\n",
+    "loc1= pc_dict['kols']\n",
     "pdate2 = dt.datetime(2019,9,13,13,00)\n",
-    "loc2= lf.kols\n",
+    "loc2= pc_dict['kols']\n",
     "# pdate3 = dt.datetime(2019,9,13,17,00)\n",
     "# loc3= lf.kols\n",
     "\n",
@@ -494,16 +506,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_111413/1504316187.py:10: UnitStrippedWarning: The unit of the quantity is stripped when downcasting to ndarray.\n",
+      "/tmp/ipykernel_103570/1839148095.py:10: UnitStrippedWarning: The unit of the quantity is stripped when downcasting to ndarray.\n",
       "  sounding_model = np.array(htd_data_model[loc.short][pvar.name][ti_model,:])\n",
-      "/tmp/ipykernel_111413/1504316187.py:10: UnitStrippedWarning: The unit of the quantity is stripped when downcasting to ndarray.\n",
+      "/tmp/ipykernel_103570/1839148095.py:10: UnitStrippedWarning: The unit of the quantity is stripped when downcasting to ndarray.\n",
       "  sounding_model = np.array(htd_data_model[loc.short][pvar.name][ti_model,:])\n"
      ]
     },
@@ -524,9 +536,9 @@
     "pvar = vf.TH\n",
     "\n",
     "pdate1 = dt.datetime(2019,9,13,3,00)\n",
-    "loc1= lf.kols\n",
+    "loc1= pc_dict['kols']\n",
     "pdate2 = dt.datetime(2019,9,13,2,00)\n",
-    "loc2= lf.ifl\n",
+    "loc2= pc_dict['ifl']\n",
     "\n",
     "# plotsettings\n",
     "xmin=285\n",
@@ -562,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -684,8 +696,8 @@
     "del_rs_agl = sounding_rs_interp3kols_i - sounding_rs_interp3murs\n",
     "\n",
     "# decide which to use: look at model bias\n",
-    "bias_amsl = del_rs_amsl - del_model_amsl\n",
-    "bias_agl = del_rs_agl - del_model_agl\n",
+    "bias_amsl = del_model_amsl - del_rs_amsl\n",
+    "bias_agl = del_model_agl - del_rs_agl\n",
     "\n",
     "## PLOT ##\n",
     "# plotsettings \n",
@@ -723,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
