--- a/process_HFoutput/calc_htd_icon_hfbl.ipynb
+++ b/process_HFoutput/calc_htd_icon_hfbl.ipynb
@@ -1417,8 +1417,33 @@
     "## SAVE ##\n",
     "# hfbl_htd_data.to_netcdf(savepath+'hfbl_htd_data_'+run+'.nc')\n",
     "# hfbl_ts_data.to_netcdf(savepath+'hfbl_ts_data_'+run+'.nc')\n",
-    "sumbl_ts_data.to_netcdf(savepath+'sumbl_htd_data_'+run+'.nc')\n",
+    "sumbl_ts_data.to_netcdf(savepath+'sumbl_ts_data_'+run+'.nc')\n",
     "sumbl_htd_data.to_netcdf(savepath+'sumbl_htd_data_'+run+'.nc')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "OSError",
+     "evalue": "no files to open",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [5], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# test if it worked\u001b[39;00m\n\u001b[1;32m      2\u001b[0m run \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mRUN3_noconv\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m----> 3\u001b[0m data_loaded\u001b[39m=\u001b[39mxarray\u001b[39m.\u001b[39mopen_mfdataset(savepath\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m\u001b[39msumbl_ts_data_\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39mrun\u001b[39m+\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.nc\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m data_loaded\n",
+      "File \u001b[0;32m/scratch/tlezuo/miniconda3/envs/psyplot/lib/python3.9/site-packages/xarray/backends/api.py:873\u001b[0m, in \u001b[0;36mopen_mfdataset\u001b[0;34m(paths, chunks, concat_dim, compat, preprocess, engine, data_vars, coords, combine, parallel, join, attrs_file, combine_attrs, **kwargs)\u001b[0m\n\u001b[1;32m    870\u001b[0m     paths \u001b[39m=\u001b[39m [os\u001b[39m.\u001b[39mfspath(p) \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(p, os\u001b[39m.\u001b[39mPathLike) \u001b[39melse\u001b[39;00m p \u001b[39mfor\u001b[39;00m p \u001b[39min\u001b[39;00m paths]\n\u001b[1;32m    872\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m paths:\n\u001b[0;32m--> 873\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mOSError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mno files to open\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    875\u001b[0m \u001b[39mif\u001b[39;00m combine \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mnested\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m    876\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(concat_dim, (\u001b[39mstr\u001b[39m, DataArray)) \u001b[39mor\u001b[39;00m concat_dim \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
+      "\u001b[0;31mOSError\u001b[0m: no files to open"
+     ]
+    }
+   ],
+   "source": [
+    "# test if it worked\n",
+    "run = 'RUN3_noconv'\n",
+    "data_loaded=xarray.open_mfdataset(savepath+'sumbl_htd_data_'+run+'.nc')\n",
+    "data_loaded"
    ]
   }
  ],
